Correcting OpenAPI specs
