# controllers/HealthController.go
@@ -5,13 +5,16 @@ import "github.com/gin-gonic/gin"
 // Ping godoc
 // @Summary Pings the server
 // @Description Pings the server for checking the health of the server
-// @Tags root, health
+// @Tags root
 // @Accept */*
 // @Produce json
-// @Success 200 {object} map[string]interface{}
+// @Success 200 {object} PongResponse
 // @Router /ping [get]
 func Ping(c *gin.Context) {
-	c.JSON(200, gin.H{
-		"message": "Test 3 Pong",
-	})
+	response := PongResponse{Message: "pong"}
+	c.JSON(200, &response)
+}
+
+type PongResponse struct {
+	Message string `json:"message" example:"pong"`
 }
