# models/LoginResponse.go
@@ -1,63 +1,63 @@
 package models
 
 type LoginResponse struct {
-	PlanetConfig string     `json:"planet_config"`
+	PlanetConfig string     `json:"planet_config" example:"Planet2.json"`
 	Position     Position   `json:"position"`
 	Water        Resource   `json:"water"`
 	Graphene     Resource   `json:"graphene"`
-	Shelio       Resource   `json:"shelio"`
+	Shelio       int        `json:"shelio" example:"23"`
 	Population   Population `json:"population"`
 	Mines        []Mine     `json:"mines"`
 }
 
 type Position struct {
-	System  int    `json:"system"`
-	Sector  int    `json:"sector"`
-	Planet  int    `json:"planet"`
-	Display string `json:"display"`
+	System  int    `json:"system" example:"23"`
+	Sector  int    `json:"sector" example:"49"`
+	Planet  int    `json:"planet" example:"7"`
+	Display string `json:"display" example:"23:49:7"`
 }
 
 type Resource struct {
-	GenerationRate int `json:"generation_rate"`
-	Amount         int `json:"amount"`
-	Reserved       int `json:"reserved"`
+	GenerationRate int `json:"generation_rate" example:"3"`
+	MaxLimit       int `json:"max_limit" example:"100"`
+	Amount         int `json:"amount" example:"23"`
+	Reserved       int `json:"reserved" example:"14"`
 }
 
 type Population struct {
-	Total          int                `json:"total"`
-	GenerationRate int                `json:"generation_rate"`
-	Unemployed     int                `json:"unemployed"`
+	Total          int                `json:"total" example:"45"`
+	GenerationRate int                `json:"generation_rate" example:"3"`
+	Unemployed     int                `json:"unemployed" example:"3"`
 	Workers        EmployedPopulation `json:"workers"`
 	Soldiers       EmployedPopulation `json:"soldiers"`
 }
 
 type EmployedPopulation struct {
-	Total int `json:"total"`
-	Idle  int `json:"idle"`
+	Total int `json:"total" example:"21"`
+	Idle  int `json:"idle" example:"4"`
 }
 
 type Mine struct {
-	Id          string      `json:"_id"`
-	Type        string      `json:"type"`
-	MaxLimit    int         `json:"max_limit"`
-	Mined       int         `json:"mined"`
+	Id          string      `json:"_id" example:"W101"`
+	Type        string      `json:"type" example:"WATER"`
+	MaxLimit    int         `json:"max_limit" example:"550"`
+	Mined       int         `json:"mined" example:"125"`
 	MiningPlant MiningPlant `json:"mining_plant"`
 }
 
 type MiningPlant struct {
-	BuildingId          string              `json:"building_id"`
-	BuildingLevel       int                 `json:"building_level"`
-	MiningRate          int                 `json:"mining_rate"`
-	Workers             int                 `json:"workers"`
+	BuildingId          string              `json:"building_id" example:"WMP101"`
+	BuildingLevel       int                 `json:"building_level" example:"3"`
+	Workers             int                 `json:"workers" example:"12"`
 	NextLevelAttributes NextLevelAttributes `json:"next_level"`
 }
 
 type NextLevelAttributes struct {
-	GrapheneRequired           int `json:"graphene_required"`
-	WaterRequired              int `json:"water_required"`
-	ShelioRequired             int `json:"shelio_required"`
-	CurrentMiningRatePerWorker int `json:"current_mining_rate_per_worker"`
-	NextMiningRatePerWorker    int `json:"next_mining_rate_per_worker"`
-	CurrentWorkersMaxLimit     int `json:"current_workers_max_limit"`
-	NextWorkersMaxLimit        int `json:"next_workers_max_limit"`
+	GrapheneRequired           int `json:"graphene_required" example:"101"`
+	WaterRequired              int `json:"water_required" example:"5"`
+	ShelioRequired             int `json:"shelio_required" example:"0"`
+	CurrentMiningRatePerWorker int `json:"current_mining_rate_per_worker" example:"1"`
+	NextMiningRatePerWorker    int `json:"next_mining_rate_per_worker" example:"1"`
+	CurrentWorkersMaxLimit     int `json:"current_workers_max_limit" example:"40"`
+	NextWorkersMaxLimit        int `json:"next_workers_max_limit" example:"65"`
 }
